--- a/aboutme.html
+++ b/aboutme.html
@@ -8,5 +8,11 @@
 <body style= "background-color:blue;">
 <h1>My Portfolio</h1>
 <p>My first paragraph.</p>
+
+  <p>About Me</p>
+  <ul style = "list-style-type:square">
+    <li>I like:</li>
+    <ol> <li>Netflix</li> <li>Dogs</li> <li>Traveling</li> </ol>
+  </ul>
 </body>
 </html>
