--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-<body style= "background-color:blue;">
+<body style= "background-color:powderblue;">
 <h1>My Portfolio</h1>
 <p>My first paragraph.</p>
 
