--- a/aboutme.html
+++ b/aboutme.html
@@ -9,10 +9,14 @@
 <h1>My Portfolio</h1>
 <p>My first paragraph.</p>
 
-  <p>About Me</p>
+<h3>About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
-    <ol> <li>Netflix</li> <li>Dogs</li> <li>Traveling</li> </ol>
+    <ol> <li>When hangouts are atually just naps with friends</li> <li>Dogs</li> <li>Traveling</li> </ol>
   </ul>
+  <ul style = "list-style-type:square">
+    <li>I dislike:</li>
+    <ol> <li>People who cut lines</li> <li>Boys that don't text back</li> <li>Tupperware without lids</li> </ol>
+  </ul>  
 </body>
 </html>
