--- a/aboutme.html
+++ b/aboutme.html
@@ -7,16 +7,18 @@
 <body>
 <body style= "background-color:powderblue;">
 <h1>My Portfolio</h1>
-<p>My first paragraph.</p>
+<p>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</p>
 
 <h3>About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
-    <ol> <li>When hangouts are atually just naps with friends</li> <li>Dogs</li> <li>Traveling</li> </ol>
+    <ol> <li>When hangouts are  just naps with friends</li> <li>Ben & Jerry's Cherry Garcia</li> <li>Going the wrong way on escalators</li> </ol>
   </ul>
   <ul style = "list-style-type:square">
     <li>I dislike:</li>
-    <ol> <li>People who cut lines</li> <li>Boys that don't text back</li> <li>Tupperware without lids</li> </ol>
+    <ol> <li>Frosting</li> <li>Boys that don't text back</li> <li>Tupperware without lids</li> </ol>
   </ul>  
+  
+<img src = "wedding.jpg" alt="whoops sorry" style:"width:140px; height:128px;">
 </body>
 </html>
