--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,8 @@
 <h1>My Portfolio</h1>
 <p>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</p>
 
-<h3>About Me</h3>
+<h3>
+  About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
     <ol> <li>When hangouts are  just naps with friends</li> <li>Ben & Jerry's Cherry Garcia</li> <li>Going the wrong way on escalators</li> </ol>
