--- a/aboutme.html
+++ b/aboutme.html
@@ -7,9 +7,9 @@
 <body>
 <body style= "background-color:powderblue;">
 <h1>My Portfolio</h1>
-<p>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</p>
+<p><i>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</i></p>
 
-<h3>
+<h3 style="color:white;">
   About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
@@ -19,6 +19,11 @@
     <li>I dislike:</li>
     <ol> <li>Frosting</li> <li>Boys that don't text back</li> <li>Tupperware without lids</li> </ol>
   </ul>  
+  
+  <p>Some of my favorite websites include browsing
+  <a href="https://www.pinterest.com">Pinterest</a>, online window-shopping at 
+    <a href="https://www.madewell.com">Madewell</a>, and playing <a href="https://www.tetrisfriends.com">Tetris</a>.
+  </p>
   
 <img src = "wedding.jpg" alt="whoops sorry" style:"width:140px; height:128px;">
 </body>
