--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 
   
   
-<h3 style="color:white;">
+<h3 style="color:lavender;">
   About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
