--- a/aboutme.html
+++ b/aboutme.html
@@ -9,9 +9,9 @@
 <h1>My Portfolio</h1>
 <p><i>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</i></p>
 
+<h3 style="color:cyan;">
   
   
-<h3 style="color:lavender;">
   About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
