--- a/aboutme.html
+++ b/aboutme.html
@@ -27,6 +27,6 @@
     <a href="https://www.madewell.com">Madewell</a>, and playing <a href="https://www.tetrisfriends.com">Tetris</a>.
   </p>
   
-<img src = "wedding.jpg" alt="whoops sorry" style:"width:140px; height:128px;">
+<img src = "wedding.JPG" alt="whoops sorry" style:"width:140px; height:128px;">
 </body>
 </html>
