--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,11 @@
 
 <body>
 <body style= "background-color:powderblue;">
-<h1>My Portfolio</h1>
+<body style = "font-family:
+<h1 style = "font-family: Imprint MT Shadow; font-size:250%">My Portfolio</h1>
 <p><i>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</i></p>
 
-<h3 style="color:cyan;">
+<h3 style="color:navy; font-size: 150%">
   
   
   About Me</h3>
@@ -27,6 +28,6 @@
     <a href="https://www.madewell.com">Madewell</a>, and playing <a href="https://www.tetrisfriends.com">Tetris</a>.
   </p>
   
-<img src = "wedding.JPG" alt="whoops sorry" style:"width:140px; height:128px;">
+<img src = "wedding.JPG" alt="whoops sorry" style:"width:50px; height:80px;">
 </body>
 </html>
