--- a/aboutme.html
+++ b/aboutme.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Lynda - hero of man and woman</title>
 </head>
 
 <body>
 <body style= "background-color:powderblue;">
-<body style = "font-family:
-<h1 style = "font-family: Imprint MT Shadow; font-size:250%">My Portfolio</h1>
+<body style = "font-family: Constantia;">
+<h1 style = "font-family: Imprint MT Shadow; font-size:250%">MY PORTFOLIO</h1>
 <p><i>I'm Lynda Pham, a rising senior at Kentwood High School. I love wearing tacky Hawaiian print and eating cupcakes!</i></p>
 
-<h3 style="color:navy; font-size: 150%">
-  
-  
-  About Me</h3>
+<h3 style="color:navy; font-size: 150%">About Me</h3>
   <ul style = "list-style-type:square">
     <li>I like:</li>
     <ol> <li>When hangouts are  just naps with friends</li> <li>Ben & Jerry's Cherry Garcia</li> <li>Going the wrong way on escalators</li> </ol>
