--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,19 @@
   <a href="https://www.pinterest.com">Pinterest</a>, online window-shopping at 
     <a href="https://www.madewell.com">Madewell</a>, and playing <a href="https://www.tetrisfriends.com">Tetris</a>.
   </p>
+
+ <style>.container {
+   position:relative;}
+   .bottomleft {
+     position:absolute; bottom:10px; left 30px; font-size:20px;}
   
-<img src = "wedding.JPG" alt="whoops sorry" style:"width:50px; height:80px;">
+<img src = "wedding.JPG" alt="whoops sorry" width="40" height="60">
+img{
+  position: absolute;
+  left: 400px;
+  top: 200px;
+  z-index:-1;
+  }
+  
 </body>
 </html>
