--- a/aboutme.html
+++ b/aboutme.html
@@ -37,6 +37,13 @@ img{
   top: 200px;
   z-index:-1;
   }
-  
+   
+   <h3>Conditionals</h3>
+   <p style = "color:pink;"> if a given statement is true, an action is performed </p>
+   <p style = "color:black;"> if user_input == "Yes": <br>
+    print(bunny) </p>
+   <img src = "Conditional Scratch.PNG alt = "couldn't load. Sorry!" width = "321" length = "106">
+   
+   
 </body>
 </html>
