--- a/aboutme.html
+++ b/aboutme.html
@@ -25,10 +25,10 @@
     <a href="https://www.madewell.com">Madewell</a>, and playing <a href="https://www.tetrisfriends.com">Tetris</a>.
   </p>
 
- <style>.container {
+ <!--<style>.container {
    position:relative;}
    .bottomleft {
-     position:absolute; bottom:10px; left 30px; font-size:20px;}
+     position:absolute; bottom:10px; left 30px; font-size:20px;}-->
   
 <img src = "wedding.JPG" alt="whoops sorry" width="722" height="902">
 
