--- a/aboutme.html
+++ b/aboutme.html
@@ -30,33 +30,33 @@
    .bottomleft {
      position:absolute; bottom:10px; left 30px; font-size:20px;}-->
   
-<img src = "wedding.JPG" alt="whoops sorry" width="200" height="400">
+<img src = "wedding.JPG" alt="whoops sorry" width="340" height="400">
 
    
    <h3>Conditionals</h3>
    <p style = "color:red;"> if a given statement is true, an action is performed </p>
    <p style = "color:black;"> if user_input == "Yes": <br>
     print(bunny) </p>
-   <img src = "Conditional Scratch.PNG alt = "couldn't load. Sorry!" width = "321" length = "106">
+   <img src = "Conditional Scratch.PNG alt = "couldn't load. Sorry!" width = "321" height = "106">
    <p style = "color:navy;"> If there are more than 5 cookies left, then I can eat one. </p>
    
       <h3>Variables</h3>
    <p style = "color:red;"> a value, given either by the programmer or user, is stored </p>
    <p style = "color:black;"> if number = int(input("What is your name?") </p>
-   <img src = "Variable Scratch.PNG alt = "couldn't load. Sorry!" width = "151" length = "44">
+   <img src = "Variable Scratch.PNG alt = "couldn't load. Sorry!" width = "151" height = "44">
    <p style = "color:navy;"> LOL means laugh out loud. </p>
    
       <h3>Function</h3>
    <p style = "color:red;"> a series of actions is defined as a single action </p>
    <p style = def goodDay(): <br> print("hi") <br> print ("good morning")</p>
-   <img src = "Function Scratch.PNG" alt = "couldn't load. Sorry!" width = "180" length = "200">
+   <img src = "Function Scratch.PNG" alt = "couldn't load. Sorry!" width = "180" height = "200">
     <p style = "color:navy;"> If I say Electric Slide, I am referring to the order of movements in which you  Grapevine right, Grapevine left, rock back and forth w a  toe-touch, do a quarter turn to the left, and repeat.</p>
    
       <h3>Loop</h3>
    <p style = "color:red;"> an action/s are performed repeatedly for a length of time </p>
    <p style = "color:black;"> for turns in range (x): <br> forward(150) <br> left(degree) </p>
 
-   <img src = "Loop Scratch.PNG" alt = "couldn't load. Sorry!" width = "245" length = "137">
+   <img src = "Loop Scratch.PNG" alt = "couldn't load. Sorry!" width = "245" height = "137">
    <p style = "color:navy;"> Run continuously until you have run for 30 minutes.</p>
    
    
