--- a/aboutme.html
+++ b/aboutme.html
@@ -37,13 +37,13 @@
    <p style = "color:red;"> if a given statement is true, an action is performed </p>
    <p style = "color:black;"> if user_input == "Yes": <br>
     print(bunny) </p>
-<img src = "Conditional Scratch.PNG alt = "couldn't load. Sorry!" width = "321" height = "106">
+<img src = "Conditional Scratch.PNG" alt = "couldn't load. Sorry!" width = "321" height = "106">
    <p style = "color:navy;"> If there are more than 5 cookies left, then I can eat one. </p>
    
       <h3>Variables</h3>
    <p style = "color:red;"> a value, given either by the programmer or user, is stored </p>
    <p style = "color:black;"> if number = int(input("What is your name?") </p>
- <img src = "Variable Scratch.PNG alt = "couldn't load. Sorry!" width = "151" height = "44">
+ <img src = "Variable Scratch.PNG" alt = "couldn't load. Sorry!" width = "151" height = "44">
    <p style = "color:navy;"> LOL means laugh out loud. </p>
    
       <h3>Function</h3>
