--- a/aboutme.html
+++ b/aboutme.html
@@ -59,6 +59,16 @@
  <img src = "Loop Scratch.PNG" alt = "couldn't load. Sorry!" width = "245" height = "137">
    <p style = "color:navy;"> Run continuously until you have run for 30 minutes.</p>
    
+  
+  <h2>Robotics Reflection</h2>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+    Robotics is much more nuanced than I had thought. The ethics and core principles behind robotics could easily be debated heavily and it would still result in an agreement to disagree. Robotics are wildly complex and useful, 
+    particularly for minimizing the harmful impact of human bias and/or error, but it does raise the question of the replacement of humans with robots. It can and will be nervewracking to place trust in hardware that could
+    malfunction, but that could be countered by the dangers of trusting humans who are infinitely more complicated. <br>
+  </p>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+    I liked having groups to bounce ideas off of, particularly because I don't know much about robotics and don't have a physics foundation. Next time, though, I will be sure to ask if I don't understand.
+  </p>
    
 </body>
 </html>
