--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,12 @@
 <head>
 <title>Lynda - hero of man and woman</title>
 </head>
-
+p.rightcolumn {
+  margin: 20px 0 20px 0;
+  border: 1 px powderblue;
+  padding: 75 px;
+  }
+  
 <body>
 <body style= "background-color:powderblue;">
 <body style = "font-family: Constantia;">
@@ -30,35 +35,45 @@
    .bottomleft {
      position:absolute; bottom:10px; left 30px; font-size:20px;}-->
   
-<img src = "wedding.JPG" alt="whoops sorry" width="328" height="400">
+<img src = "wedding.JPG" alt="whoops sorry" width="328" height="400" style="float:right;width:42px;height:42px;>
 
+  table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  }
    
-   <h3>Conditionals</h3>
+  <table style = "width:200%">
+    <tr>
+      <th>Conditionals</th>
+      <th>Variables</th> 
+      <th>Functions</th>
+      <th>Loops</th>
+    </tr>
+    <tr>
    <p style = "color:red;"> if a given statement is true, an action is performed </p>
    <p style = "color:black;"> if user_input == "Yes": <br>
     print(bunny) </p>
 <img src = "Conditional Scratch.PNG" alt = "couldn't load. Sorry!" width = "321" height = "106">
    <p style = "color:navy;"> If there are more than 5 cookies left, then I can eat one. </p>
-   
-      <h3>Variables</h3>
+    </tr>
+    <tr>
    <p style = "color:red;"> a value, given either by the programmer or user, is stored </p>
    <p style = "color:black;"> if number = int(input("What is your name?") </p>
  <img src = "Variable Scratch.PNG" alt = "couldn't load. Sorry!" width = "151" height = "44">
    <p style = "color:navy;"> LOL means laugh out loud. </p>
-   
-      <h3>Function</h3>
+    </tr>
+    <tr>
    <p style = "color:red;"> a series of actions is defined as a single action </p>
    <p style = def goodDay(): <br> print("hi") <br> print ("good morning")</p>
  <img src = "Function Scratch.PNG" alt = "couldn't load. Sorry!" width = "180" height = "200">
     <p style = "color:navy;"> If I say Electric Slide, I am referring to the order of movements in which you  Grapevine right, Grapevine left, rock back and forth w a  toe-touch, do a quarter turn to the left, and repeat.</p>
-   
-      <h3>Loop</h3>
+    </tr>
+    <tr>
    <p style = "color:red;"> an action/s are performed repeatedly for a length of time </p>
    <p style = "color:black;"> for turns in range (x): <br> forward(150) <br> left(degree) </p>
-
- <img src = "Loop Scratch.PNG" alt = "couldn't load. Sorry!" width = "245" height = "137">
+  <img src = "Loop Scratch.PNG" alt = "couldn't load. Sorry!" width = "245" height = "137">
    <p style = "color:navy;"> Run continuously until you have run for 30 minutes.</p>
-   
+  </tr>
   
   <h2>Robotics Reflection</h2>
   <p style = "font-family: Constantia;" "margin-left: 40px">
