--- a/aboutme.html
+++ b/aboutme.html
@@ -75,7 +75,7 @@ p.rightcolumn {
    <p style = "color:navy;"> Run continuously until you have run for 30 minutes.</p>
   </tr>
   
-  <h2>Robotics Reflection</h2>
+  <h2>July 17: Robotics </h2>
   <p style = "font-family: Constantia;" "margin-left: 40px">
     Robotics is much more nuanced than I had thought. The ethics and core principles behind robotics could easily be debated heavily and it would still result in an agreement to disagree. Robotics are wildly complex and useful, 
     particularly for minimizing the harmful impact of human bias and/or error, but it does raise the question of the replacement of humans with robots. It can and will be nervewracking to place trust in hardware that could
@@ -83,6 +83,17 @@ p.rightcolumn {
   </p>
   <p style = "font-family: Constantia;" "margin-left: 40px">
     I liked having groups to bounce ideas off of, particularly because I don't know much about robotics and don't have a physics foundation. Next time, though, I will be sure to ask if I don't understand.
+  </p>
+                                                           
+    <h2>July 18: Ardiuno Lights</h2>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+    Manuela Veloso and Ayanna Howard, both prominent women in the engineering sector, though particularly robotics, worked on NASA research teams. Now, both are working on robots that are meant to aid vulnerable people. Howard 
+    developed a detection mechanism for children with learning disabilities to access media-based technology through simple taps and swipes. Veloso's Co-Bot has potential to help in nursing homes or aid the elderly as the robots 
+    are able to complete simple tasks without guided direction. Howard and Veloso work with the human user in mind.<br>
+  </p>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+    We worked well. We understood the MVP well enough to make a functioning LED board that also played sounds. We could have been more focused in the beginning to really envision the robot.
+                                                           Ardiuno sketches should consist of the voltage needed, the pieces needed (such as jumper cables, resistors, LED), and a clear direction.
   </p>
    
 </body>
