--- a/aboutme.html
+++ b/aboutme.html
@@ -94,6 +94,13 @@ p.rightcolumn {
   <p style = "font-family: Constantia;" "margin-left: 40px">
     We worked well. We understood the MVP well enough to make a functioning LED board that also played sounds. We could have been more focused in the beginning to really envision the robot.
                                                            Ardiuno sketches should consist of the voltage needed, the pieces needed (such as jumper cables, resistors, LED), and a clear direction.
+  </p
+  <h2>July 19: Dance Party </h2>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+   I learned that there are separate pins for the piezo at the top of the breadband. I loved the complexity of our song, Gangnam Style!<br>
+  </p>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+    They may require outputs that react to sensors and things in the environment. 
   </p>
    
 </body>
