--- a/aboutme.html
+++ b/aboutme.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Lynda - hero of man and woman</title>
-</head>
-p.rightcolumn {
-  margin: 20px 0 20px 0;
-  border: 1 px powderblue;
-  padding: 75 px;
+  <title>Lynda - hero of man and woman</title>
+  <link href= "style.css" rel= "stylesheet" type = "text/css">
+  p.rightcolumn {
+    margin: 20px 0 20px 0;
+    border: 1 px powderblue;
+    padding: 75 px;
   }
+</head>
+
   
 <body>
 <body style= "background-color:powderblue;">
