--- a/aboutme.html
+++ b/aboutme.html
@@ -144,7 +144,7 @@ p.rightcolumn {
    I learned that there are separate pins for the piezo at the top of the breadband. I loved the complexity of our song, Gangnam Style!<br>
   </p>
   <p style = "font-family: Constantia;" "margin-left: 40px">
-    They may require outputs that react to sensors and things in the environment. 
+    They may require outputs that react to sensors and things in the environment. <br> <br><br><br><br>
   </p>
    
 </body>
