--- a/aboutme.html
+++ b/aboutme.html
@@ -146,6 +146,12 @@ p.rightcolumn {
   <p style = "font-family: Constantia;" "margin-left: 40px">
     They may require outputs that react to sensors and things in the environment. <br> <br><br><br><br>
   </p>
+                                                           
+  <h2>August 2: Problem Solving </h2>
+  <p style = "font-family: Constantia;" "margin-left: 40px">
+   I was proud of the binary search project! Although there were different formats, Khloe and I were able to figure out our own way to implement the while loop using a boolean rather than using the loop code from RosettaCode. Though it was little, it was a testament to the success of different approaches to the same problems.<br>
+  </p>
+
    
 </body>
 </html>
