--- a/aboutme.html
+++ b/aboutme.html
@@ -144,12 +144,12 @@ p.rightcolumn {
    I learned that there are separate pins for the piezo at the top of the breadband. I loved the complexity of our song, Gangnam Style!<br>
   </p>
   <p style = "font-family: Constantia;" "margin-left: 40px">
-    They may require outputs that react to sensors and things in the environment. <br> <br><br><br><br>
+    They may require outputs that react to sensors and things in the environment.
   </p>
                                                            
   <h2>August 2: Problem Solving </h2>
   <p style = "font-family: Constantia;" "margin-left: 40px">
-   I was proud of the binary search project! Although there were different formats, Khloe and I were able to figure out our own way to implement the while loop using a boolean rather than using the loop code from RosettaCode. Though it was little, it was a testament to the success of different approaches to the same problems.<br>
+   I was proud of the binary search project! Although there were different formats, Khloe and I were able to figure out our own way to implement the while loop using a boolean rather than using the loop code from RosettaCode. Though it was little, it was a testament to the success of different approaches to the same problems.<br> <br> <br> <br> <br>
   </p>
 
    
